--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
         </dependency>
         <dependency>
             <groupId>reflectlib</groupId>
-            <artifactId>ReflectLib</artifactId>
+            <artifactId>reflectlib</artifactId>
             <version>1.3</version>
             <scope>compile</scope>
         </dependency>
