--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     
     <properties>
         <reflectlib.version>1.3.1</reflectlib.version>
-        <reflectlib.package>1_3_1</reflectlib.package>
+        <reflectlib.package>1_3_1_noitemabuse</reflectlib.package>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
