--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>noitemabuse</groupId>
     <artifactId>NoItemAbuse</artifactId>
-    <version>1.4.2</version>
+    <version>1.4.3</version>
     <name>NoItemAbuse</name>
     <url>http://github.com/ruany/NoItemAbuse</url>
     
     <properties>
-        <reflectlib.version>1.3.1</reflectlib.version>
-        <reflectlib.package>1_3_1_noitemabuse</reflectlib.package>
+        <reflectlib.version>1.3.2</reflectlib.version>
+        <reflectlib.package>noitemabuse</reflectlib.package>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
@@ -50,9 +50,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>1.4</version>
-                <!-- <configuration>
+                <configuration>
                     <minimizeJar>true</minimizeJar>
-                </configuration> -->
+                </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -63,7 +63,7 @@
                             <relocations>
                                 <relocation>
                                     <pattern>reflectlib</pattern>
-                                    <shadedPattern>reflectlib.v${reflectlib.package}</shadedPattern>
+                                    <shadedPattern>reflectlib.${reflectlib.package}</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
